preventing margin collapse

--- a/scss/view/index.scss
+++ b/scss/view/index.scss
@@ -1,3 +1,7 @@
+body {
+    border: 1px solid transparent;
+}
+
 #content {
     width: 21cm;
     margin: 1em auto;
